@@ -1,13 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.541 2005/12/23 21:14:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.542 2005/12/23 22:32:57 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   23 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
   initial commit
+  move some of portage function from GLIAT
+  src/GLIArchitectureTemplate.py:
+  revamp install_packages() for new GLIPortage
 
   21 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
